2011-10-06  Andreas K. Foerster  <info@akfoerster.de>

	* lua/four_in_a_row.lua: new file

2011-10-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_disc): optional coordinates

2011-10-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (disc, lgraphic_disc): new functions

2011-10-02  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_put): position is optional
	optimized when same width and x==1

	* lua/akfavatar-graphic.c (lgraphic_put_transparency): new function

2011-10-01  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c: refactoring color handling
	background color now stored for each graphic

	* lua/akfavatar-graphic.c (lgraphic_new): accept background color

	* lua/akfavatar-graphic.c (lgraphic_clear, lgraphic_color):
	error on bad color name

	* many files: make it compile as C++ again (extern "C")

2011-09-30  Andreas K. Foerster  <info@akfoerster.de>

	* filechooser.c (get_directory): use alphasort for scandir

2011-09-28  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_shift_horizontally):
	new function

2011-09-27  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_shift_vertically):
	new function

	* avatar.c (avt_show_raw_image): make sure image is initialized

------------------------------------------------------------------------

2011-09-13  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.21.2 released

2011-09-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (SYSTEMENCODING): new macro
	(avt_mb_encoding): accepts NULL or "" for system encoding
	filechooser.c: adapted
	akfavatar.h: documented change

2011-09-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_recode_buffer):
	fix: use correct conversion descriptor (fixes title)

	* lua/audioplayer.lua:
	recode the filenames to UTF-8
	fix: check for empty list
